--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
     <header>
         <div class="left">
-            <img src="/logo gym (1).jpg" alt="">
+            <img src="logo gym (1).jpg" alt="">
             <div>
                 Pandey Fitness
             </div>
